--- a/statefarm/partner/index.html
+++ b/statefarm/partner/index.html
@@ -54,7 +54,7 @@
                   <!----></div>
               </div>
               <div class="row">
-                <div class="col-sm-12"><span id="login-submit-wrap"><a href="dashboard.html"
+                <div class="col-sm-12"><span id="login-submit-wrap"><a href="list.html"
                                                                             class="submit-btn btn btn-default">Login</a></span>
                   <span id="forgot-password-link"><a href="#" onclick="alert('Same as embed forgot flow')"
                                                      class="forgot-password">Forgot Password?</a></span></div>
