Removing emails from sign in app wireframes

--- a/statefarm/partner/project-completed.html
+++ b/statefarm/partner/project-completed.html
@@ -67,12 +67,12 @@
                   <h3 class="margin-top-none">Showed</h3>
 
                   <ul class="list-group checked-list-box">
-                    <li class="list-group-item">Ulysses Galliher<div class="email">test@example.com</div></li>
-                    <li class="list-group-item" data-checked="true">Priscila Felberbaum<div class="email">test@example.com</div></li>
-                    <li class="list-group-item">Celestina Mennella<div class="email">test@example.com</div></li>
-                    <li class="list-group-item">Terri Cowens<div class="email">test@example.com</div></li>
-                    <li class="list-group-item">Sanda Hazzard<div class="email">test@example.com</div></li>
-                    <li class="list-group-item">Lavonna Mcalexander<div class="email">test@example.com</div></li>
+                    <li class="list-group-item">Ulysses Galliher</li>
+                    <li class="list-group-item" data-checked="true">Priscila Felberbaum</li>
+                    <li class="list-group-item">Celestina Mennella</li>
+                    <li class="list-group-item">Terri Cowens</li>
+                    <li class="list-group-item">Sanda Hazzard</li>
+                    <li class="list-group-item">Lavonna Mcalexander</li>
                   </ul>
 
                   <h3>No-Showed</h3>
