--- a/statefarm/partner/project.html
+++ b/statefarm/partner/project.html
@@ -71,24 +71,24 @@
                   <h3 class="margin-top-none">Volunteer Role-Call</h3>
 
                     <ul class="list-group checked-list-box">
-                      <li class="list-group-item">Ulysses Galliher<div class="email">test@example.com</div></li>
-                      <li class="list-group-item" data-checked="true">Priscila Felberbaum<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Celestina Mennella<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Terri Cowens<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Sanda Hazzard<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Lavonna Mcalexander<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Chau Surface<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Neda Meyerhoff<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Claris Gean<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Carmon Hollinger<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Luvenia Everhart<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Kassandra Zito<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Coreen Burbridge<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Jean Throop<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Cristopher Brekke<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Retha Lansing<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Bethanie Kelsch<div class="email">test@example.com</div></li>
-                      <li class="list-group-item">Clarice BeutlerCras justo odio<div class="email">test@example.com</div></li>
+                      <li class="list-group-item">Ulysses Galliher</li>
+                      <li class="list-group-item" data-checked="true">Priscila Felberbaum</li>
+                      <li class="list-group-item">Celestina Mennella</li>
+                      <li class="list-group-item">Terri Cowens</li>
+                      <li class="list-group-item">Sanda Hazzard</li>
+                      <li class="list-group-item">Lavonna Mcalexander</li>
+                      <li class="list-group-item">Chau Surface</li>
+                      <li class="list-group-item">Neda Meyerhoff</li>
+                      <li class="list-group-item">Claris Gean</li>
+                      <li class="list-group-item">Carmon Hollinger</li>
+                      <li class="list-group-item">Luvenia Everhart</li>
+                      <li class="list-group-item">Kassandra Zito</li>
+                      <li class="list-group-item">Coreen Burbridge</li>
+                      <li class="list-group-item">Jean Throop</li>
+                      <li class="list-group-item">Cristopher Brekke</li>
+                      <li class="list-group-item">Retha Lansing</li>
+                      <li class="list-group-item">Bethanie Kelsch</li>
+                      <li class="list-group-item">Clarice BeutlerCras justo odio</li>
                     </ul>
 
 
