--- a/statefarm/partner/project-completed.html
+++ b/statefarm/partner/project-completed.html
@@ -67,22 +67,22 @@
                   <h3 class="margin-top-none">Showed</h3>
 
                   <ul class="list-group checked-list-box">
-                    <li class="list-group-item">Ulysses Galliher</li>
-                    <li class="list-group-item" data-checked="true">Priscila Felberbaum</li>
-                    <li class="list-group-item">Celestina Mennella</li>
-                    <li class="list-group-item">Terri Cowens</li>
-                    <li class="list-group-item">Sanda Hazzard</li>
-                    <li class="list-group-item">Lavonna Mcalexander</li>
+                    <li class="list-group-item"><span class="state-icon glyphicon glyphicon-check"></span>Ulysses Galliher</li>
+                    <li class="list-group-item" data-checked="true"><span class="state-icon glyphicon glyphicon-check"></span>Priscila Felberbaum</li>
+                    <li class="list-group-item"><span class="state-icon glyphicon glyphicon-check"></span>Celestina Mennella</li>
+                    <li class="list-group-item"><span class="state-icon glyphicon glyphicon-check"></span>Terri Cowens</li>
+                    <li class="list-group-item"><span class="state-icon glyphicon glyphicon-check"></span>Sanda Hazzard</li>
+                    <li class="list-group-item"><span class="state-icon glyphicon glyphicon-check"></span>Lavonna Mcalexander</li>
                   </ul>
 
                   <h3>No-Showed</h3>
 
                   <ul class="list-group checked-list-box">
-                    <li class="list-group-item">Neda Meyerhoff</li>
-                    <li class="list-group-item">Claris Gean</li>
-                    <li class="list-group-item">Carmon Hollinger</li>
-                    <li class="list-group-item">Luvenia Everhart</li>
-                    <li class="list-group-item">Kassandra Zito</li>
+                    <li class="list-group-item"><span class="state-icon glyphicon glyphicon-unchecked"></span>Neda Meyerhoff</li>
+                    <li class="list-group-item"><span class="state-icon glyphicon glyphicon-unchecked"></span>Claris Gean</li>
+                    <li class="list-group-item"><span class="state-icon glyphicon glyphicon-unchecked"></span>Carmon Hollinger</li>
+                    <li class="list-group-item"><span class="state-icon glyphicon glyphicon-unchecked"></span>Luvenia Everhart</li>
+                    <li class="list-group-item"><span class="state-icon glyphicon glyphicon-unchecked"></span>Kassandra Zito</li>
                   </ul>
 
                 </div> <!----></div>
