fixing up partner config var

--- a/statefarm/partner/app-demo.html
+++ b/statefarm/partner/app-demo.html
@@ -41,7 +41,7 @@
         // Partner Mode
         // -----------------
         partnerApp: true,
-        parnterChildUrl: 'https://neighborhoodofgood.statefarm.com/take-action/index.shtml'
+        partnerChildUrl: 'https://neighborhoodofgood.statefarm.com/take-action/index.shtml'
       }
     }
   </script>
